# CNN-fromscratch

./: README.md  feed_forward_neural_network.py  layer.py  pyproject.toml  test.py
midterm_neuralnetworks/: FNN.py
midterm_nueralnetworks/: feed_forward_neural_network.py  layer.py
midterm_nueralnetworks/cases/: case_1.py  case_2.py  case_2_batch_experimentation.py  case_3.py  vanderpol_data.py
midterm_nueralnetworks/final_test_cases/: MNIST_test_case.py  cifar10_trest_case.py  mnsit_lenet_pytorch.py  mnsit_test_case.py  test_utils.py
midterm_nueralnetworks/midterm_test_cases/: midterm_case3_batch_experimentation.py  midterm_case_1.py  midterm_case_2.py  midterm_case_2_batch_experimentation.py  midterm_case_3.py  midterm_case_3_batch_experimentation.py
midterm_nueralnetworks/neural_network/: _kernels.py  activation.py  feed_forward_neural_network.py  layer.py  loss.py  sklearn_classifier_wrapper.py  utils.py
midterm_nueralnetworks/project3_test_cases/: adam_handwriting_test.py  adam_handwriting_test_case.py  adam_titanic_test.py  handwriting_test.py  nesterov_handwriting_test.py  nesterov_titanic_test.py  nestrov_titanic_test.py  newton_handwriting_test_case.py  titanic_test.py  xavier_handwriting_test.py  xavier_handwriting_test_case.py  xavier_titanic_test_case.py
proj3_results/: Handwritten Digits_table.tex  Titanic_table.tex  handwritten_digits_results.csv  project3_analysis.ipynb  titanic_results.csv
tests/: test_feed_forward_neural_network.py  test_layer.py
