[tool.poetry]
name = "midterm-nueralnetworks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
case1 = "midterm_nueralnetworks.cases.case_1:main"

